BUG: Clear search text icon is not visible. Fixed the issue.

--- a/dp-web/src/app/modules/dataset/views/dashboard/nav-tag-panel/nav-tag-panel.component.scss
+++ b/dp-web/src/app/modules/dataset/views/dashboard/nav-tag-panel/nav-tag-panel.component.scss
@@ -38,7 +38,8 @@
       padding-right: 35px;
     }
 
-    & .fa-search{
+    & .fa-search,
+    & .fa-times {
       position: absolute;
       top: 11px;
       right: 15px;
